added bg-image behind bg-video

--- a/index.html
+++ b/index.html
@@ -12,31 +12,34 @@
 		<link href="https://fonts.googleapis.com/css?family=Fauna+One|Josefin+Slab|Nixie+One" rel="stylesheet" type="text/css">
 		<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/> -->
 		<link href="main.css" rel="stylesheet" type="text/css">
-		<!-- <link href="main.js" rel="javascript" type="text/javascript"> -->
+		<link href="main.js" rel="javascript" type="text/javascript">
 	</head>
 
 	<body>
 
-		<video id="bgvid" playsinline autoplay muted loop>
+		<img class="bg-image" src="black_dragon_knight.jpg">
+		<video playsinline autoplay muted loop>
 			<source src="black-bg.mp4">
 		</video>
+		
+		<div class="container-fluid white-font">
 
-	<div class="container-fluid white-font">
-
-		<!-- Top header and subheader -->
-		<div>
-		<h1 class="myfont1">Mu Global - Negocie seus items aqui</h1>
-		<h2 class="myfont2">É muito simples.</h2>
+			<!-- Top header and subheader -->
+			<div>
+			<h1 class="myfont1">Mu Global - Negocie seus items aqui</h1>
+			<h2 class="myfont2">É muito simples.</h2>
+			</div>
 		</div>
 
 		<!-- Author message -->
-		<div class="text-right">
-			<p>criado por Marlon Aviz<br>
-			para ser usado gratuitamente<br>
-			pela comunidade MU</p>
+		<div class="container-fluid white-font">
+			<div class="text-right">
+				<p>criado por Marlon Aviz<br>
+				para ser usado gratuitamente<br>
+				pela comunidade MU</p>
+			</div>
 		</div>
-	</div>
-	<div class="container-fluid">
+	<div class="container-fluid transition">
 		<div class="row">
 
 			<!-- Coluna comprar -->
