split css/js/media into folder and edited index.html accordingly

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 		-->
 		<link href="https://fonts.googleapis.com/css?family=Fauna+One|Josefin+Slab|Nixie+One" rel="stylesheet" type="text/css">
 		<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/> -->
-		<link href="main.css" rel="stylesheet" type="text/css">
-		<link href="main.js" rel="javascript" type="text/javascript">
+		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="js/main.js" rel="javascript" type="text/javascript">
 	</head>
 
 	<body>
 
-		<img class="bg-image" src="black_dragon_knight.jpg">
+		<img class="bg-image" src="media/black_dragon_knight.jpg">
 		<video playsinline autoplay muted loop>
-			<source src="black-bg.mp4">
+			<source src="media/black-bg.mp4">
 		</video>
 		
 		<div class="container-fluid white-font">
