improved media files names and changed index.html accordingly

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 	<body>
 
-		<img class="bg-image" src="media/black_dragon_knight.jpg">
+		<img class="bg-image" src="media/black_dragon_knight_bg.jpg">
 		<video playsinline autoplay muted loop>
-			<source src="media/black-bg.mp4">
+			<source src="media/black_smoke_bg.mp4">
 		</video>
 		
 		<div class="container-fluid white-font">
